exercises/ex2-request_routing/dr.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: app-tier-destination
  namespace: app-tier
spec:
  host: app-tier-svc.app-tier.svc.cluster.local 
  subsets:
  - name: v1
    labels:
      version: v1
  - name: v2
    labels:
      version: v2
