exercises/ex2-request_routing/vs.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: app-tier-route
  namespace: app-tier
spec:
  hosts:
  - app-tier-svc.app-tier.svc.cluster.local
  http:
  - name: "app-v1-route"  
    route:
    - destination:
        host: app-tier-svc.app-tier.svc.cluster.local
        subset: v1
